--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="content">
   <router-outlet></router-outlet>
+  <!--<app-login></app-login>-->
 </div>
 <app-footer [title]='"Powerd by Muhammed Atallah"'></app-footer>
