--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,38 +1,40 @@
 <div class="content" fxLayout="row" fxLayoutAlign="center">
 
-    <mat-card elevation="5" fxFlex>
+  <mat-card elevation="5" fxFlex>
 
-      <mat-card-subtitle>
-        <h2>Angular Spring Starter</h2>
-      </mat-card-subtitle>
+    <mat-card-subtitle>
+      <h2>SBS</h2>
+    </mat-card-subtitle>
 
-      <mat-card-title>
-        <h2>{{title}}</h2>
-      </mat-card-title>
+    <mat-card-title>
+      <h2>{{title}}</h2>
+    </mat-card-title>
 
-      <mat-card-content>
+    <mat-card-content>
 
-        <p [class]="notification.msgType" *ngIf="notification">{{notification.msgBody}}</p>
+      <p [class]="notification.msgType" *ngIf="notification">{{notification.msgBody}}</p>
 
-        <form *ngIf="!submitted" [formGroup]="form" (ngSubmit)="onSubmit()" #loginForm="ngForm">
-          <mat-input-container>
-            <input matInput formControlName="username" required placeholder="user/admin">
-          </mat-input-container>
-          <mat-input-container>
-            <input matInput formControlName="password" required type="password" placeholder="123">
-          </mat-input-container>
-          <button type="submit" [disabled]="!loginForm.form.valid" mat-raised-button color="primary">Login</button>
-        </form>
-        <br>
-        <div *ngIf="!submitted" >
-          <button matTooltip="Reset password if someone has changed it already!" (click)="onResetCredentials()" mat-raised-button color="accent">Reset Credentials</button>
-        </div>
+      <form *ngIf="!submitted" [formGroup]="form" (ngSubmit)="onSubmit()" #loginForm="ngForm">
+        <mat-input-container>
+          <input matInput formControlName="username" required placeholder="user/admin">
+        </mat-input-container>
+        <mat-input-container>
+          <input matInput formControlName="password" required type="password" placeholder="123">
+        </mat-input-container>
+        <button type="submit" [disabled]="!loginForm.form.valid" mat-raised-button color="primary">Login</button>
+      </form>
+      <br>
+      <div *ngIf="!submitted">
+        <button matTooltip="Reset password if someone has changed it already!" (click)="onResetCredentials()"
+                mat-raised-button color="accent">Reset Credentials
+        </button>
+      </div>
 
-        <mat-spinner *ngIf="submitted" mode="indeterminate"></mat-spinner>
-        <br>
-        <hr>
-      </mat-card-content>
+      <mat-spinner *ngIf="submitted" mode="indeterminate"></mat-spinner>
+      <br>
+      <hr>
+    </mat-card-content>
 
-    </mat-card>
+  </mat-card>
 
 </div>
